# gdds

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: config.yaml
configs/algo/: campbell.yaml  gdds.yaml  udlm.yaml
configs/data/: ag_news.yaml  fineweb-edu.yaml  lambada.yaml  lm1b-gpt2.yaml  lm1b-streaming.yaml  lm1b-wrap.yaml  lm1b.yaml  openwebtext-split.yaml  openwebtext-streaming.yaml  openwebtext.yaml  ptb.yaml  scientific_papers_arxiv.yaml  scientific_papers_pubmed.yaml  synthetic.yaml  text8-crop.yaml  text8.yaml  wikitext103.yaml  wikitext2.yaml
configs/eval/: gen_ppl.yaml  generate_samples.yaml
configs/forward_process/: gdds_cosine.yaml  gdds_gauss.yaml  sik_keops.yaml  sik_knn.yaml
configs/model/: campbell.yaml  campbell_small.yaml
configs/noise/: exponential.yaml  geometric.yaml
configs/paths/: default.yaml  local.yaml
configs/sampling/: annealed_block.yaml  campbell_absorbing.yaml  campbell_uniform.yaml  default.yaml  gdds_sik.yaml  udlm.yaml
configs/strategy/: ddp.yaml  fsdp.yaml
src/discrete_diffusion/: __init__.py
src/discrete_diffusion/algorithms/: __init__.py  ar.py  base.py  campbell.py  gdds.py  mdlm.py  udlm.py
src/discrete_diffusion/benchmarks/: forward_processes.py
src/discrete_diffusion/callbacks/: sample_saver.py
src/discrete_diffusion/data/: __init__.py  loaders.py
src/discrete_diffusion/evaluations/: eval_metrics.py  generate_samples.py  generative_ppl.py  metrics.py  metrics_check.py  ppl_eval.py
src/discrete_diffusion/forward_process/: __init__.py  absorbing.py  base.py  base_ctmc.py  campbell.py  sik.py  uniform.py
src/discrete_diffusion/forward_process/kernels/: __init__.py  base.py  cuda_sampler.py  keops.py  knn.py
src/discrete_diffusion/forward_process/kernels/csrc/: block_sampler.cpp  block_sampler_cuda.cu
src/discrete_diffusion/models/: block_dit.py  campbell.py  common.py  encoder_decoder.py
src/discrete_diffusion/noise_schedules/: __init__.py  base.py  exponential.py  geometric.py
src/discrete_diffusion/sampling/: __init__.py  campbell.py  gdds_sik_knn.py
src/discrete_diffusion/utils/: __init__.py  rank_masks.py  utils.py
src/discrete_diffusion/visualizations/: README.md  analyze_kernel.py  animate_sik_keops.py  animate_sik_knn.py  cache_sik_demo.py  plot_lambda.py  visualize_sik_keops.py  visualize_sik_knn.py
